refined contact formular

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -309,7 +309,7 @@ a:after {
 	line-height: 40px;
 	letter-spacing: 3px;
 	margin-left: 15px;
-    font-family: "Annie Use Your Telescope";
+    font-family: "Francois One";
 	text-shadow: 3px 3px 3px #000;
 }
 
